fix: regroup elements based on type, add spacing to distinguish types better

--- a/public/src/main.scss
+++ b/public/src/main.scss
@@ -292,6 +292,10 @@ a {
 	margin-bottom: 1.0rem;
 }
 
+.server-settings-group {
+	margin: 1.0rem 0;
+}
+
 .server-settings-container.two-columns {
 	grid-template-columns: 1fr 1fr;
 }
